# Calibra

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  results_l4l6.json
.github/: pull_request_template.md
calibra/: __init__.py  __main__.py  anomalies.py  benchmark.py  card.py  certify.py  claims.py  compare.py  corrupt.py  cure.py  diagnose.py  gap.py  outcome_db.py  pipeline.py  predict.py  prune.py  pruning.py  report_html.py  retarget.py  score.py  serve.py  sft_outcome.py  sft_select.py  sim2real.py  strategy.py  surprise.py  transfer.py  watch.py
docs/: awesome_list_submissions.md  calibra-score.md  claims.md  hf_blog_post.md  index.md
examples/: groot_finetuning.ipynb  lerobot_watch_integration.py
experiments/: RESULTS.md  ablation_benchmark.py  check_pusht_variance.py  cross_dataset_analysis.ipynb  cross_dataset_analysis_executed.ipynb  cross_dataset_spearman.py  data_sufficiency_study.py  failure_prevention_benchmark.py  il_ceiling_pusht.py  predict_correlation_study.py  prune_performance_benchmark.py  pusht_real_benchmark.py  real_il_benchmark.py  regime_space.py  reproduce_results.sh  scale_benchmark.py  sft_fingerprint_alpaca.py  sft_gen_answers.py  sft_prepare_datasets.py  sft_score_mtbench.py  sft_select_alpaca.py  sft_train.py  worldmodel_vs_il.py
notebooks/: gr00t_workflow.ipynb
paper/: main.tex  references.bib
results/: ablation_aloha.json  ablation_droid.json  ablation_pusht_real.json  ablation_pusht_real_contact_aware.json  aloha_mobile_cabinet.json  calibra_sft_9k.json  cross_dataset_spearman_run.json  droid_100.json
scripts/: benchmark_prune_quality.py  benchmark_scale.py  generate_claims_doc.py  generate_paper_figures.py  profile_aloha.json  profile_batch.py  profile_dataset.py  profile_pusht.json  profile_pusht.py  run_correlation_study.py  run_pruning_intervention.py  run_retention_sweep.py  run_scientific_ablations.py  summarize_experiments.py  validate_claims.py  validate_world_model_observability.py
server/: Dockerfile  main.py  requirements.txt
tests/: conftest.py  test_anomalies.py  test_card.py  test_comparator.py  test_corrupt.py  test_coverage.py  test_curation_entropy.py  test_curator.py  test_cure_and_pai.py  test_curriculum.py  test_deepmind_enhancements.py  test_drift.py  test_export.py  test_force_torque.py  test_gr00t.py  test_grail.py  test_isaac_lab.py  test_latent_dynamics.py  test_llm_select.py  (+15 more)
(+125 files in other folders)
