[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibra"
version = "0.1.0"
description = "Dataset reliability and risk profiling for robotics imitation learning"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.scripts]
calibra = "calibra.__main__:main"

[project.optional-dependencies]
hdf5       = ["h5py>=3.0"]
lerobot    = ["datasets>=2.0", "pyarrow>=12.0", "duckdb>=0.9"]
rlds       = ["tensorflow>=2.12", "tensorflow-datasets>=4.9"]
mcap       = ["mcap>=0.0.10", "mcap-ros2-support>=0.0.3"]
kinematics = ["scipy>=1.10"]
dev        = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all        = ["calibra[hdf5,lerobot,rlds,mcap,kinematics]"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
