[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibra-robotics"
version = "0.6.0"
description = "Dataset reliability and risk profiling for robotics imitation learning"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/omerTT/Calibra"
"Bug Tracker" = "https://github.com/omerTT/Calibra/issues"

[project.scripts]
calibra = "calibra.__main__:main"

[project.optional-dependencies]
hdf5        = ["h5py>=3.0"]
lerobot     = ["datasets>=2.0", "pyarrow>=12.0", "duckdb>=0.9"]
rlds        = ["tensorflow>=2.12", "tensorflow-datasets>=4.9"]
mcap        = ["mcap>=0.0.10", "mcap-ros2-support>=0.0.3"]
kinematics  = ["scipy>=1.10"]
dev         = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
watch       = ["watchdog>=3.0"]
vlm         = ["torch>=2.0", "torchvision>=0.15", "transformers>=4.28", "pillow>=9.0"]
experiments = ["torch>=2.0", "matplotlib>=3.5", "pandas>=1.5", "scipy>=1.10"]
serve       = ["fastapi>=0.100", "uvicorn[standard]>=0.23"]
llm         = ["datasets>=2.0", "sentence-transformers>=2.0", "pyarrow>=12.0"]
all         = ["calibra-robotics[hdf5,lerobot,rlds,mcap,kinematics,watch,vlm,experiments,serve,llm]"]

[tool.hatch.build.targets.wheel]
packages = ["calibra"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
